[package]
name = "wasm-base32"
version = "0.1.0"
authors = ["Willian Zhang <willian@willian-zhang.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
base32 = "0.4"
hex = "0.4"

[profile.release]
lto = true
