[package]
name = "wasm-base32"
version = "0.1.0"
authors = ["Willian Zhang <willian@willian-zhang.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
base32 = "0.4"
hex = "0.4"
cfg-if = "0.1"
wee_alloc = {version = "0.4" , optional = true }

[profile.dev]
lto = false
opt-level = 1

[profile.release]
lto = true
opt-level = 3

